# selauraClient

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  context.hpp  main.cpp  runtime.cpp  runtime.hpp
src/api/: imports.hpp
src/api/mc/client/: ClientInstance.hpp
src/api/mc/client/gui/: GuiData.hpp
src/api/mc/client/renderer/: LevelRenderer.hpp  MeshHelpers.hpp  MinecraftUIRenderContext.hpp  ScreenContext.hpp  Tessellator.hpp
src/client/: CMakeLists.txt  client.cpp  client.hpp  dllmain.cpp  main.cpp  selaura.cpp  selaura.hpp
src/client/api/: stt.hpp
src/client/command/: command.hpp  command_handler.hpp
src/client/command/impl/: disable_command.cpp  disable_command.hpp  enable_command.cpp  enable_command.hpp
src/client/components/: client.cpp  client.hpp  component.hpp
src/client/config/: types.hpp
src/client/event/: event_types.hpp
src/client/feature/: feature_manager.hpp
src/client/feature/impl/render/: enchant_glint.cpp  enchant_glint.hpp  environment.cpp  environment.hpp
src/client/memory/: handle.cpp  handle.hpp  patcher.hpp  scan_target.cpp  scan_target.hpp  scanner.cpp  scanner.hpp  signatures.hpp
src/client/memory/patterns/android/: patterns.hpp
src/client/memory/patterns/win/: patterns.hpp
src/client/memory/sdk/core/: RenderItemInHandDescription.cpp  RenderItemInHandDescription.hpp
src/client/memory/sdk/game/: ClientInstance.cpp  ClientInstance.hpp  MinecraftGame.cpp  MinecraftGame.hpp
src/client/memory/sdk/network/: IPacketHandlerDispatcher.hpp  LoopbackPacketSender.cpp  LoopbackPacketSender.hpp  MinecraftPacketIds.hpp  MinecraftPackets.hpp  NetworkPeer.hpp  Packet.cpp  Packet.hpp  (+2 more)
src/client/patches/: patch_manager.cpp  patch_manager.hpp
src/event/: event_manager.hpp  events.hpp
src/hooks/: hooks.cpp  hooks.hpp  memory.hpp
src/loader/: main_win.cpp  main_win.hpp
src/mc/: CMakeLists.txt  mcsdk.cpp  mcsdk.hpp
src/mc/game/: IMinecraftGame.hpp
src/mc/game/common/: SubClientId.hpp
src/mc/game/network/: IPacketHandlerDispatcher.hpp  MinecraftPacketIds.hpp  Packet.hpp
src/thunker/: CMakeLists.txt
src/thunker/include/thunker/: common.hpp  hook.hpp  platform.hpp
src/thunker/src/: hook.cpp  windows.cpp
(+17 files in other folders)
